--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
   adafruit/Adafruit NeoPixel@^1.15.1
   https://github.com/the78mole/BTHomeV2-Arduino.git#adding_fwversion_packetid_device_id
 ;  deeja/BTHomeV2-Arduino@^3.1.0
+extra_scripts = scripts/set_version.py
